# intelligraph-mini

./: README.md  pyproject.toml
intelligraph_mini/: __init__.py  encoder.py  intelligence.py  server.py
